Fixed spacing and mobile display

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,38 +10,31 @@ h3{
     background-color: rgba(0,0,0,0.9);
 }
 
+#questionBox{
+    padding: 15px;
+}
+
 #questionBox h2{
 	color: #f6a230;
 	font-weight: bolder;
 	-webkit-text-stroke: 2px #53180f;
 }
 
-#questionBox, #answerBox, #progressBox, #logoBox{
-	/*border: 1px solid black;*/
-	margin-bottom: 15px;
-
-
+#logoBox{
+	margin-bottom: 15px;   
 }
+
 
 .midPanel{
 	/*display: table;*/
     background-color: rgba(0,0,0,0.8);
-}
-
-#questionBox{
-	display: table-cell;
-	float: none;
+    border-radius: 24px;
 }
 
 #answerBox{
-	display: flex;
-    flex-direction: column;
-	justify-content: center;
-    align-items: center;
-    height: 100%;
-    display: table-cell;
-    float: none;
+	padding: 15px;
 }
+
 
 .btn {
     padding: 14px 24px;
@@ -57,7 +50,7 @@ h3{
 	align-items: center;
 }
 
-.btn-lg.round {
+.btn-sm.round {
 	border-radius: 24px;
 }
  
@@ -79,3 +72,17 @@ h3{
     box-shadow: none;
 }
 
+/*<!-- MEDIA QUERIES -->*/
+@media only screen and (max-width: 768px) {
+    body{
+        background-attachment: fixed;
+    }
+}
+
+@media (max-width: @screen-xs) {
+    body{font-size: 10px;}
+}
+
+@media (max-width: @screen-sm) {
+    body{font-size: 14px;}
+}
